# bio_janitor

./: .dockerignore  .gitignore  .hfignore  Dockerfile  README.md  README_local_backup.md  __init__.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt  test_environment.py
server/: Dockerfile  __init__.py  app.py  environment.py
tasks/: base_knowledge.json  easy_gdpr_obvious.json  hard_gdpr_ccpa_multi.json  medium_gdpr_subtle.json
